--- a/templates/base.html
+++ b/templates/base.html
@@ -7,5 +7,9 @@
   <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen" />
   {% endblock %}
 </head>
-<body>{% block body %}{% endblock %}</body>
+<body>
+  <div class="{% block containerclass %}container{% endblock %}">
+    {% block body %}{% endblock %}
+  </div>
+</body>
 </html>
