--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
   <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen" />
   {% endblock %}
 </head>
-<body>
+<body data-spy="scroll" data-target="#nav">
   <div class="{% block containerclass %}container{% endblock %}">
     {% block body %}{% endblock %}
   </div>
