--- a/templates/index.html
+++ b/templates/index.html
@@ -11,13 +11,13 @@
     line-height: 1;
 }
 .container {
-    width: 700px;
+    width: 750px;
 }
 </style>
 {% endblock %}
 {% block body %}
 <div class="jumbotron">
-<h1>lol sourcemaps</h1>
+<h1>SourceMap Validator</h1>
 <p class="lead">Sourcemaps are hard. Make sure you did it right.</p>
 <form action="/validate" class="form-inline">
     <div class="input-append">
