--- a/templates/index.html
+++ b/templates/index.html
@@ -28,8 +28,8 @@
 </div>
 <h2>Examples</h2>
 <ul>
-    <li><a href="/validate?url=http://code.jquery.com/jquery-1.9.1.min.js">jQuery</a></li>
-    <li><a href="/validate?url=http://d3nslu0hdya83q.cloudfront.net/dist/1.0/raven.min.js">Raven.js</a></li>
-    <li><a href="/validate?url=http://getsentry-cdn.s3.amazonaws.com/test/raven.min.js">Raven.js (with closure compiler)</a></li>
+    <li><a href="validate?url=http%3A%2F%2Fcode.jquery.com%2Fjquery-1.9.1.min.js">jQuery</a></li>
+    <li><a href="/validate?url=http%3A%2F%2Fd3nslu0hdya83q.cloudfront.net%2Fdist%2F1.0%2Fraven.min.js">Raven.js</a></li>
+    <li><a href="/validate?url=http%3A%2F%2Fgetsentry-cdn.s3.amazonaws.com%2Ftest%2Fraven.min.js">Raven.js (with closure compiler)</a></li>
 </ul>
 {% endblock %}
