--- a/templates/report.html
+++ b/templates/report.html
@@ -23,13 +23,14 @@
 {% block body %}
 <div id="header" class="row">
   <h1>Report</h1>
-  <h3><a href="{{ url }}" target="_blank">{{ url }}</a></h3>
+  <h3><a href="{{ url }}" target="_blank">{{ url }} <i class="icon-share"></i></a></h3>
   {% if report.errors %}
-  <div class="alert alert-error">Fail. Check the <a href="#errors">errors</a> below. <i class="icon-thumbs-down"></i></div>
+  <div class="alert alert-error"><strong>Fail.</strong> Check the <a href="#errors">errors</a> below. <i class="icon-thumbs-down"></i></div>
   {% else %}
-  <div class="alert alert-success">Pass. Everything looks good! <i class="icon-thumbs-up"></i></div>
+  <div class="alert alert-success"><strong>Pass.</strong> Everything looks good! <i class="icon-thumbs-up"></i></div>
   {% endif %}
 </div>
+
 <div class="row">
   <div id="nav" class="span2">
     <ul class="nav nav-tabs nav-stacked affix-top span2" data-spy="affix" data-offset-top="175">
@@ -42,7 +43,7 @@
   <div class="span10">
     <h2 id="sources">Sources <span class="badge badge-info">{{ sources|length }}</span></h2>
     {% for source in sources %}
-    <li><a href="{{ source }}" target="_blank">{{ source }}</a></li>
+    <li><a href="{{ source }}" target="_blank">{{ source }} <i class="icon-share"></i></a></li>
     {% endfor %}
 
     <h2 id="errors">Errors <span class="badge badge-important">{{ report.errors|length }}</span></h2>
