Adding Google Analytics

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,5 +11,7 @@
   <div class="{% block containerclass %}container{% endblock %}">
     {% block body %}{% endblock %}
   </div>
+
+   <script>var _gaq=[['_setAccount','UA-34959157-3'],['_trackPageview']];(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src='//www.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'));</script>
 </body>
 </html>
