Adding page titles

--- a/templates/report.html
+++ b/templates/report.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}{{ url }} - SourceMap Validator{% endblock %}
 {% block styles %}
 {{ super() }}
 <link href="/static/css/prettyprint.css" rel="stylesheet" />
