--- a/templates/error.html
+++ b/templates/error.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Derp. - SourceMap Validator{% endblock %}
 {% block body %}
 <h1>Error</h1>
 <pre>{{ error.message }}</pre>
