--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   {% block styles %}
   <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen" />
+  <style>
+  .social {
+    margin: 30px auto 0;
+    width: 480px;
+    text-align: center;
+    border-top: 1px solid #ddd;
+    padding-top: 10px;
+  }
+  .social > p {
+    padding-top: 10px;
+  }
+  </style>
   {% endblock %}
 </head>
 <body data-spy="scroll" data-target="#nav">
   <div class="{% block containerclass %}container{% endblock %}">
     {% block body %}{% endblock %}
+
+    <div class="row social">
+        <iframe src="http://ghbtns.com/github-btn.html?user=mattrobenolt&repo=sourcemap-validator&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe>
+        <iframe src="http://ghbtns.com/github-btn.html?user=mattrobenolt&repo=sourcemap-validator&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe>
+        <p>A <a href="https://github.com/mattrobenolt">Matt Robenolt</a> project.</p>
+    </div>
   </div>
 
    <script>var _gaq=[['_setAccount','UA-34959157-3'],['_trackPageview']];(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src='//www.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'));</script>
