--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,7 @@
     </div>
 </form>
 </div>
+<p style="font-size: 1.2em"><a href="/libraries"><strong>Check out current open source library support</strong></a><p>
 <h2>Examples</h2>
 <ul>
     <li><a href="/validate?url=http%3A%2F%2Fcode.jquery.com%2Fjquery-1.9.1.min.js">jQuery</a></li>
