--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 <h1>Does it support SourceMaps yet?</h1>
-<p>The following libraries are currated from the popular public CDNs.</p>
+<p>The following libraries are currated from the popular public CDNs. <a href="/">Try out your own!</a></p>
 <div class="progress">
   <div class="bar bar-success" data-toggle="tooltip" data-placement="bottom" title="0"></div>
   <div class="bar bar-danger" data-toggle="tooltip" data-placement="bottom" title="0"></div>
