--- a/templates/report.html
+++ b/templates/report.html
@@ -63,6 +63,6 @@
   </div>
 </div>
 
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
 {% endblock %}
