--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -25,7 +25,7 @@
     <tr id="lib_{{this.id}}">
       <td>{{this.[0]}}</td>
       <td>{{this.[1]}}</td>
-      <td class="status">...</td>
+      <td class="status"><img src="/static/img/ajax-loader.gif" width="16" height="16" /></td>
     <tr>
   {{/each}}
   </table>
