--- a/templates/report.html
+++ b/templates/report.html
@@ -50,13 +50,13 @@
     <h2 id="errors">Errors <span class="badge badge-important">{{ report.errors|length }}</span></h2>
     {% for error in report.errors %}
       {% if error.message %}
-      <h4>{{ error.message }}</h4>
-      {% for resolution in error.resolutions %}
-      <li>{{ resolution }}</li>
-      {% endfor %}
+        <h4>{{ error.message|safe }}</h4>
+          {% for resolution in error.resolutions %}
+            <li>{{ resolution|safe }}</li>
+          {% endfor %}
       {% else %}
-      <h4>In <code>{{ error.token.src }}</code>: Expected <code>{{ error.token.name }}</code>, but found <code>{{ error.expected }}</code></h4>
-      <pre class="prettyprint linenums"><ol class="linenums" start="{{ error.token.src_line - 3 }}">{% for line in error.pre %}<li>{{ line }}</li>{% endfor %}<li class="culprit"><span>{{ error.line }}</span></li>{% for line in error.post %}<li>{{ line }}</li>{% endfor %}</ol></pre>
+        <h4>In <code>{{ error.token.src }}</code>: Expected <code>{{ error.token.name }}</code>, but found <code>{{ error.expected }}</code></h4>
+        <pre class="prettyprint linenums"><ol class="linenums" start="{{ error.token.src_line - 3 }}">{% for line in error.pre %}<li>{{ line }}</li>{% endfor %}<li class="culprit"><span>{{ error.line }}</span></li>{% for line in error.post %}<li>{{ line }}</li>{% endfor %}</ol></pre>
       {% endif %}
     {% else %}
     No errors!
