Consistently use SourceMap

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 {% block body %}
 <div class="jumbotron">
 <h1>SourceMap Validator</h1>
-<p class="lead">Sourcemaps are hard. Make sure you did it right.</p>
+<p class="lead">SourceMaps are hard. Make sure you did it right.</p>
 <form action="/validate" class="form-inline">
     <div class="input-append">
         <input type="text" class="span6" name="url" placeholder="http://code.jquery.com/jquery-1.9.1.min.js" />
