--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,8 @@
     {% block body %}{% endblock %}
 
     <div class="row social">
-        <iframe src="http://ghbtns.com/github-btn.html?user=mattrobenolt&repo=sourcemap-validator&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe>
-        <iframe src="http://ghbtns.com/github-btn.html?user=mattrobenolt&repo=sourcemap-validator&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe>
+        <iframe src="https://ghbtns.com/github-btn.html?user=mattrobenolt&repo=sourcemap-validator&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe>
+        <iframe src="https://ghbtns.com/github-btn.html?user=mattrobenolt&repo=sourcemap-validator&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe>
         <p>A <a href="https://github.com/mattrobenolt">Matt Robenolt</a> project.</p>
     </div>
   </div>
